# Minamoto

./: .gitignore  .gitmodules  Minamoto.sln
Minamoto.AndroidStudio/: local.properties  settings.gradle
Minamoto.AndroidStudio/app/: build.gradle
Minamoto.AndroidStudio/app/src/main/: AndroidManifest.xml
Minamoto.AndroidStudio/app/src/main/cpp/: CMakeLists.txt
Minamoto.AndroidStudio/app/src/main/java/com/minamoto/: Activity.java
Minamoto.AndroidStudio/app/src/main/res/values/: strings.xml
Minamoto.xcworkspace/: contents.xcworkspacedata
Module/: ClangPlatform.Android.xcconfig  ClangPlatform.Windows.xcconfig  Interface.h
Module/Editor/: Editor.cpp  Editor.h  ImGuiHelper.h
Module/Editor/Graphic/: ShaderAssembler.cpp  ShaderAssembler.h  ShaderAssemblerD3D8.cpp  ShaderAssemblerD3D8.h  ShaderAssemblerNV10.cpp  ShaderAssemblerNV10.h  ShaderAssemblerNV20.cpp  ShaderAssemblerNV20.h  ShaderAssemblerR200.cpp  ShaderAssemblerR200.h  ShaderDisassembler.cpp  ShaderDisassembler.h  ShaderDisassembly.cpp  ShaderDisassembly.h
Module/Editor/Import/: Import.cpp  Import.h  ImportFBX.cpp  ImportFBX.h  ImportPLY.cpp  ImportPLY.h  ImportWavefront.cpp  ImportWavefront.h
Module/Editor/Object/: Camera.cpp  Camera.h
Module/Editor/Shader/: ShaderWavefront.cpp  ShaderWavefront.h
Module/Editor/Utility/: Grid.cpp  Grid.h  MeshTools.cpp  MeshTools.h  TextureTools.cpp  TextureTools.h  Tools.cpp  Tools.h
Module/Editor/Window/: About.cpp  About.h  Console.cpp  Console.h  Document.cpp  Document.h  Game.cpp  Game.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  Log.cpp  Log.h  LuaConsole.cpp  LuaConsole.h  Profiler.cpp  Profiler.h  Project.cpp  Project.h  QuickJSConsole.cpp  QuickJSConsole.h  Scene.cpp  Scene.h  Setup.cpp  Setup.h
Module/Editor/Window/Component/: Console.cpp  Console.h  Folder.cpp  Folder.h
Module/Minamoto/: DearImGui.cpp  DearImGui.h  Logger.cpp  Logger.h  Module.cpp  Module.h  Renderer.cpp  Renderer.h  main.cpp  main.mm  mainJNI.cpp
Module/Minamoto/implement/: imgui_impl_xx.cpp
Module/Runtime/: Runtime.cpp  Runtime.h  xxBinaryV2.cpp  xxBinaryV2.h
Module/Runtime/Camera/: CameraTools.cpp  CameraTools.h
Module/Runtime/Graphic/: Binary.cpp  Binary.h  Binding.cpp  Binding.h  Buffer.cpp  Buffer.h  Material.cpp  Material.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexAttribute.cpp  VertexAttribute.h
Module/Runtime/MiniGUI/: Font.cpp  Font.h  Window.cpp  Window.h
Module/Runtime/Modifier/: ArrayModifier.cpp  ArrayModifier.h  BakedQuaternion16Modifier.cpp  BakedQuaternion16Modifier.h  BakedQuaternionModifier.cpp  BakedQuaternionModifier.h  ConstantQuaternionModifier.cpp  ConstantQuaternionModifier.h  ConstantScaleModifier.cpp  ConstantScaleModifier.h  ConstantTranslateModifier.cpp  ConstantTranslateModifier.h  Float2Modifier.cpp  Float2Modifier.h  Float3Modifier.cpp  Float3Modifier.h  Float4Modifier.cpp  Float4Modifier.h  FloatModifier.cpp  FloatModifier.h  Modifier.cpp  Modifier.h  Modifier.inl  Quaternion16Modifier.cpp  Quaternion16Modifier.h  QuaternionModifier.cpp  QuaternionModifier.h  ScaleModifier.cpp  ScaleModifier.h  StringModifier.cpp  StringModifier.h  TranslateModifier.cpp  TranslateModifier.h
Module/Runtime/Script/: Lua.cpp  Lua.h  QuickJS.cpp  QuickJS.h  QuickJSModule.c  QuickJS_STD.c
Module/Runtime/Tools/: CSV.cpp  CSV.h  CameraTools.cpp  CameraTools.h  DrawTools.cpp  DrawTools.h  NodeTools.cpp  NodeTools.h  WindowsHeader.h
Module/Sample/: Sample.cpp
Module/Validator/: Validator.cpp
SDK/: dxsdk  gl  vulkan  xxGraphicPlus
plugin/: interface.h
plugin/sample/: sample.cpp
plugin/sample/sample.xcodeproj/: project.pbxproj
plugin/validator/: validator.cpp
plugin/validator/validator.xcodeproj/: project.pbxproj
xxImGui/: DearImGui.cpp  DearImGui.h  Plugin.cpp  Plugin.h  Renderer.cpp  Renderer.h  main.cpp  main.mm  mainJNI.cpp
xxImGui.AndroidStudio/app/src/main/cpp/: CMakeLists.txt
xxImGui.xcworkspace/: contents.xcworkspacedata
xxImGui/implement/: ftmodule.h  ftoption.h
